--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -140,3 +140,45 @@ Section: Monthly Weather Review},
 	pages = {1025--1039},
 	file = {Snapshot:C\:\\Ryan\\Paper_Zotero\\Zotero_Data\\storage\\XZNTHWP7\\qj.html:text/html;TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:application/pdf},
 }
+
+@article{Akima_70,
+  title = {A {{New Method}} of {{Interpolation}} and {{Smooth Curve Fitting Based}} on {{Local Procedures}}},
+  author = {Akima, Hiroshi},
+  year = {1970},
+  month = oct,
+  journal = {Journal of the ACM},
+  volume = {17},
+  number = {4},
+  pages = {589--602},
+  issn = {0004-5411},
+  doi = {10.1145/321607.321609}
+}
+
+@article{Akima_74,
+  title = {A Method of Bivariate Interpolation and Smooth Surface Fitting Based on Local Procedures},
+  author = {Akima, Hiroshi},
+  year = {1974},
+  month = jan,
+  journal = {Communications of the ACM},
+  volume = {17},
+  number = {1},
+  pages = {18--20},
+  issn = {0001-0782},
+  doi = {10.1145/360767.360779}
+}
+
+@article{FritschCarlson_80,
+  title = {Monotone {{Piecewise Cubic Interpolation}}},
+  author = {Fritsch, F. N. and Carlson, R. E.},
+  year = {1980},
+  month = apr,
+  journal = {SIAM Journal on Numerical Analysis},
+  volume = {17},
+  number = {2},
+  pages = {238--246},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  issn = {0036-1429},
+  doi = {10.1137/0717021}
+}
+
+
