--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -181,4 +181,19 @@ Section: Monthly Weather Review},
   doi = {10.1137/0717021}
 }
 
+@article{SpiegelmanKatz_06,
+  title = {A Semi-{{Lagrangian Crank-Nicolson}} Algorithm for the Numerical Solution of Advection-Diffusion Problems},
+  author = {Spiegelman, Marc and Katz, Richard F.},
+  year = {2006},
+  journal = {Geochemistry, Geophysics, Geosystems},
+  volume = {7},
+  number = {4},
+  issn = {1525-2027},
+  doi = {10.1029/2005GC001073},
+  langid = {english},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2005GC001073}
+}
+
+
+
 
